@@ -116,8 +116,7 @@ public class JWindowPreference extends PreferenceElement implements ComponentLis
 
     @Override
     protected void initialize(final String value) {
-        // TODO : Java 11 : Swap to isBlank
-        assert (value != null) && !value.trim().isEmpty();
+        assert (value != null) && !value.isBlank();
 
         final Window element = getWeakReference().get();
         if (element != null) {
