@@ -42,11 +42,11 @@ public abstract class AbstractIcon implements Serializable {
         this(ROOT_CATEGORY, DEFAULT_ICON_FILENAME);
     }
 
-    protected AbstractIcon(String category) {
+    protected AbstractIcon(@Nullable String category) {
         this(category, DEFAULT_ICON_FILENAME);
     }
 
-    protected AbstractIcon(String category, String filename) {
+    protected AbstractIcon(@Nullable String category, @Nullable String filename) {
         setCategory(category);
         setFilename(filename);
     }
@@ -76,13 +76,11 @@ public abstract class AbstractIcon implements Serializable {
     }
 
     public boolean hasDefaultCategory() {
-        // TODO : Java 11 : Swap to using isBlank()
-        return ROOT_CATEGORY.equals(getCategory()) || getCategory().trim().isEmpty();
+        return ROOT_CATEGORY.equals(getCategory()) || getCategory().isBlank();
     }
 
     public boolean hasDefaultFilename() {
-        // TODO : Java 11 : Swap to using isBlank()
-        return DEFAULT_ICON_FILENAME.equals(getFilename()) || getFilename().trim().isEmpty();
+        return DEFAULT_ICON_FILENAME.equals(getFilename()) || getFilename().isBlank();
     }
     //endregion Boolean Methods
 
